src/pages/ar-ae/v1.19.0/deployment/openreplay-admin.mdx
---
title: "إدارة OpenReplay"
metaTitle: "إدارة OpenReplay"
metaDescription: "كيفية إدارة وتنظيم نسخة OpenReplay الخاصة بك بسهولة."
layout: ~/layouts/MainLayout.astro
i18nReady: true
---

## CLI

تُعدّ واجهة سطر الأوامر (CLI) مفيدة لإدارة الجوانب الأساسية في نسخة OpenReplay الخاصة بك، مثل إعادة تشغيل خدمة أو إعادة تثبيتها، أو الوصول إلى سجلات أحد المكوّنات، أو ببساطة التحقق من حالة خدمات الـ backend لديك.

شغّل واجهة سطر الأوامر باستخدام الخيار `-h`:

```bash
openreplay -h
```

وسترى قائمة بجميع الخيارات المتاحة:

```shellsession
  ___                   ____            _
 / _ \ _ __   ___ _ __ |  _ \ ___ _ __ | | __ _ _   _
| | | | '_ \ / _ \ '_ \| |_) / _ \ '_ \| |/ _` | | | |
| |_| | |_) |  __/ | | |  _ <  __/ |_) | | (_| | |_| |
 \___/| .__/ \___|_| |_|_| \_\___| .__/|_|\__,_|\__, |
      |_|                        |_|            |___/

[INFO]
  Usage: openreplay [ -h | --help ]
                    [ -s | --status ]
                    [ -i | --install DOMAIN_NAME ]
                    [ -u | --upgrade ]
                    [ -U | --deprecated-upgrade /path/to/old_vars.yaml]
                    [ -r | --restart ]
                    [ -R | --Reload ]
                    [ -c | --cleanup N (in days) ]
                    [ -e | --edit ]
                    [ -p | --install-packages ]
                    [ -l | --logs SERVICE ]
         Services: alerts assets assist chalice
                   db ender frontend heuristics
                   http integrations nginx-controller
                   peers sink sourcemapreader storage
```

يعتمد backend الخاص بـ OpenReplay على المكوّنات/الخدمات التالية:

| الخدمة | الوصف |
|---------|-------------|
| http | يستقبل الأحداث وتسجيلات الجلسات |
| sink | يقرأ البيانات من خط معالجة البث (Redis أو Kafka في إصدار enterprise) ويُدرجها في تخزين مؤقت (NFS) |
| storage | ينقل ملفات تسجيلات الجلسات المؤقتة إلى خدمة تخزين الكائنات |
| assets | لتخزين الموارد مؤقتًا (CSS والخطوط والأيقونات) لعرض التسجيلات بشكل صحيح |
| db | يقرأ ويكتب في قواعد بيانات متعددة (Postgres + ClickHouse في إصدار enterprise) |
| ender | يُنهي جلسات المستخدمين في حال عدم النشاط أو انقطاع الاتصال |
| chalice | واجهة برمجة التطبيقات (API) لخدمة الواجهة الأمامية (frontend) |
| alerts | يرسل الإشعارات (البريد الإلكتروني، slack، داخل التطبيق، webhook) عند بلوغ حدٍّ يحدده المستخدم لأيٍّ من مقاييس الأداء |
| integrations |  يدفع البيانات ويسحبها من واجهات برمجة التطبيقات الخارجية المدعومة (Sentry وElastic وGitHub وJira، إلخ.) |

## أوامر مفيدة

- التحقق من حالة سلامة OpenReplay

```sh
openreplay -s
```

- التحقق من سجلات الخدمات

```sh
openreplay -l <service name>
```

## زيادة سعة الخدمة

من الممكن زيادة سعة أي خدمة عن طريق تجاوز القيم الافتراضية لتخصيص وحدة المعالجة المركزية (cpu)/الذاكرة. تُحدَّد هذه القيم أثناء عملية الإعداد بناءً على سعة نسختك، ومن المفترض أن تلبّي احتياجات معظم عمليات التثبيت.

 إذا كان لديك حجم كبير من البيانات وجهاز قوي، فما عليك سوى تشغيل ملف `openreplay -e` وتجاوز موارد الخدمة. في المثال أدناه، نقوم بذلك للعامل (worker) `http`. لكن يمكن القيام بهذا لأي خدمة (أي sink وstorage وpostgresql وredis، إلخ.) عن طريق إلغاء التعليق وتحديث الكتلة أدناه. وإذا كان عليك القيام بذلك لأكثر من خدمة، فما عليك سوى نسخ الكتلة نفسها وإعادة تسميتها/تحديثها (انتبه إلى التكرارات).

```yaml
http:
  resources:
    limits:
      cpu: 4096m
      memory: 8192Mi
    requests:
      cpu: 1024m
      memory: 2056Mi
```

أخيرًا، أعد تثبيت الخدمة لتدخل الحدود الجديدة حيّز التنفيذ (لن تفقد بياناتك):

```bash
openreplay -R
```

## إلغاء تثبيت OpenReplay

شغّل الأوامر أدناه لإلغاء تثبيت OpenReplay:

```bash
sudo k3s-uninstall.sh
```

تُخزَّن جميع الإعدادات في `/var/lib/openreplay/`.

```
sudo rm -rf /var/lib/openreplay/openreplay
```
