src/pages/ar-ae/v1.20.0/deployment/openreplay-admin.mdx
---
title: "إدارة OpenReplay"
metaTitle: "إدارة OpenReplay"
metaDescription: "كيفية إدارة وتشغيل نسخة OpenReplay الخاصة بك بسهولة."
layout: ~/layouts/MainLayout.astro
i18nReady: true
---

## CLI

تُعد واجهة سطر الأوامر (CLI) مفيدة لإدارة الجوانب الأساسية لنسخة OpenReplay الخاصة بك، مثل إعادة تشغيل خدمة أو إعادة تثبيتها، أو الوصول إلى سجلات أحد المكونات، أو ببساطة التحقق من حالة خدمات الـ backend الخاصة بك.

شغّل واجهة سطر الأوامر باستخدام الخيار `-h`:

```bash
openreplay -h
```

واطّلع على قائمة جميع الخيارات المتاحة:

```shellsession
  ___                   ____            _
 / _ \ _ __   ___ _ __ |  _ \ ___ _ __ | | __ _ _   _
| | | | '_ \ / _ \ '_ \| |_) / _ \ '_ \| |/ _` | | | |
| |_| | |_) |  __/ | | |  _ <  __/ |_) | | (_| | |_| |
 \___/| .__/ \___|_| |_|_| \_\___| .__/|_|\__,_|\__, |
      |_|                        |_|            |___/

[INFO]
  Usage: openreplay [ -h | --help ]
                    [ -s | --status ]
                    [ -i | --install DOMAIN_NAME ]
                    [ -u | --upgrade ]
                    [ -U | --deprecated-upgrade /path/to/old_vars.yaml]
                    [ -r | --restart ]
                    [ -R | --Reload ]
                    [ -c | --cleanup N (in days) ]
                    [ -e | --edit ]
                    [ -p | --install-packages ]
                    [ -l | --logs SERVICE ]
         Services: alerts assets assist chalice
                   db ender frontend heuristics
                   http integrations nginx-controller
                   peers sink sourcemapreader storage
```

يعتمد الـ backend الخاص بـ OpenReplay على المكونات/الخدمات التالية:

| الخدمة | الوصف |
|---------|-------------|
| http | يستقبل الأحداث وتسجيلات الجلسات |
| sink | يقرأ البيانات من خط أنابيب البث (Redis أو Kafka في النسخة enterprise) ويُدخلها في تخزين مؤقت (NFS) |
| storage | ينقل ملفات تسجيل الجلسات المؤقتة إلى خدمة تخزين الكائنات |
| assets | لتخزين الموارد مؤقتًا (CSS والخطوط والأيقونات) من أجل عرض التسجيلات بشكل صحيح |
| db | يقرأ ويكتب في قواعد بيانات متعددة (Postgres + ClickHouse في النسخة enterprise) |
| ender | يُنهي جلسات المستخدمين في حال عدم النشاط أو انقطاع الاتصال |
| chalice | واجهة برمجة التطبيقات (API) التي تخدم الـ frontend |
| alerts | يرسل الإشعارات (بريد إلكتروني، slack، داخل التطبيق، webhook) عند بلوغ حدٍّ يحدده المستخدم لأي من مقاييس الأداء |
| integrations |  يدفع البيانات ويسحبها من واجهات برمجة التطبيقات الخارجية المدعومة (Sentry، Elastic، GitHub، Jira، إلخ.) |

## أوامر مفيدة

- التحقق من حالة صحة OpenReplay

```sh
openreplay -s
```

- التحقق من سجلات الخدمات

```sh
openreplay -l <service name>
```

## زيادة سعة الخدمة

من الممكن زيادة سعة أي خدمة عن طريق تجاوز القيم الافتراضية المخصصة لوحدة المعالجة المركزية/الذاكرة. تُحدَّد هذه القيم الأخيرة أثناء عملية الإعداد بناءً على سعة نسختك، ومن المفترض أن تلبي احتياجات معظم عمليات التثبيت.

 إذا كان لديك حجم كبير وجهاز قوي، فما عليك سوى تشغيل ملف `openreplay -e` وتجاوز موارد الخدمة. في المثال أدناه، نقوم بذلك للـ worker `http`. لكن يمكن القيام بذلك لأي خدمة (أي sink وstorage وpostgresql وredis، إلخ.) عن طريق إلغاء التعليق وتحديث الكتلة أدناه. وإذا كان عليك القيام بذلك لأكثر من خدمة واحدة، فما عليك سوى نسخ الكتلة نفسها وإعادة تسميتها/تحديثها (انتبه إلى التكرارات).

```yaml
http:
  resources:
    limits:
      cpu: 4096m
      memory: 8192Mi
    requests:
      cpu: 1024m
      memory: 2056Mi
```

أخيرًا، أعد تثبيت الخدمة لكي تدخل الحدود الجديدة حيز التنفيذ (لن تفقد بياناتك):

```bash
openreplay -R
```

## ترقية PostgreSQL

فيما يلي تعليمات ترقية PostgreSQL إلى الإصدار 1.16 أو أحدث:

1. خذ نسخة dump من قاعدة البيانات في الـ persistent volume:

   إذا كنت تستخدم تثبيتًا vanilla، فنفّذ الأمر التالي لأخذ نسخة dump من قاعدة البيانات:

   > ملاحظة: يمكنك أن تتوقع أن تُضغط البيانات بنسبة 3:1 (مثال: إذا كان لديك 15G من بيانات postgres، فستصبح 5G في الـ dump). لذا تأكد من توفر مساحة قرص كافية لديك.

   ```sh
   kubectl -n db exec -it postgresql-0 -- /bin/bash -c 'PGPASSWORD=$POSTGRES_PASSWORD PGUSER=postgres pg_dumpall -v > /bitnami/postgresql/dumpall.sql'
   ```

2. احذف دليل البيانات الموجود:

   ```sh
   kubectl -n db exec -it postgresql-0 -- /bin/bash -c 'rm -rf /bitnami/postgresql/data'
   ```

3. اضبط مقياس StatefulSet الخاص بـ PostgreSQL إلى صفر لإيقاف الـ pods الحالية:

   ```sh
   kubectl scale sts postgresql --replicas=0 -n db
   ```

4. حدّث صورة PostgreSQL إلى الإصدار 16.3.0 أو أحدث:

   ```sh
   kubectl set image statefulset/postgresql postgresql=bitnamilegacy/postgresql:17.2.0 -n db
   ```

5. أعد ضبط مقياس StatefulSet إلى واحد لتشغيل الـ pod المُحدَّث:

   ```sh
   kubectl scale sts postgresql --replicas=1 -n db
   ```

6. تأكد من أن الـ pod قيد التشغيل وأن عملية ضبط المقياس قد اكتملت:

   ```sh
   kg po -n db -l app.kubernetes.io/name=postgresql
   ```

7. استعد قاعدة البيانات من نسخة الـ dump:

   ```sh
   kubectl -n db exec -it postgresql-0 -- /bin/bash -c 'PGPASSWORD=$POSTGRES_PASSWORD PGUSER=postgres psql -f /bitnami/postgresql/dumpall.sql'
   ```

8. بمجرد اكتمال الترقية، يمكنك حذف ملف الـ dump من الـ pod الخاص بـ PostgreSQL:

   ```sh
   kubectl -n db exec -it postgresql-0 -- /bin/bash -c 'rm /bitnami/postgresql/dumpall.sql'
   ```

## إلغاء تثبيت OpenReplay

نفّذ الأوامر أدناه لإلغاء تثبيت OpenReplay:

```bash
sudo k3s-uninstall.sh
```

تُخزَّن جميع الإعدادات في `/var/lib/openreplay/`.

```
sudo rm -rf /var/lib/openreplay/openreplay
```
